# lambda_corr

./: CHANGELOG.md  README.md  README_pypi.md  pyproject.toml
HPC/: fit_beta.py  fit_beta_distr.py  king_28_dist.sh  notch_64.sh
example/super_corr_lambda/src/: iso_MC_Auger.py  map_fig.py  new_cm.py  parabola_fig.py  robust_fit.py  super_corr_lambda.py
lambda_corr/: _LUT.py  __init__.py  _core.py  _pvals.py  lambda_corr.py
results/: test_lambdacorr2_N100.txt  test_lambdacorr2_N25.txt  test_lambdacorr2_N50.txt  test_lambdacorr2_N75.txt
src/: _reference_mean_of_medians.py  lambda_corr.py
tests/: beta_fits.py  find_abs1.py  find_abs1_parallel.py  find_limit.py  find_zeros.py  test_asymp.py  test_lambdacorr.py  test_lambdacorr2.py  test_limit.py  test_opposites.py  test_vectors.py
tests/overshoot/: fix_violation.py  max_violation.py  try_unbiased_medians.py
