[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-corr"
version = "0.8.0"
description = "Repeated-Average Rank Correlations Λ (Lambda): a family of robust, symmetric/asymmetric measures of monotone association based on pairwise rank slopes."
readme = { file = "README_pypi.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
license-files = ["*LICENSE*"]
authors = [{ name = "Jon Paul Lundquist" }]
keywords = ["statistics", "robust", "correlation", "ranked-correlation", "repeated-average", "theil-sen", "siegel-slopes", "repeated-median", "pearson", "spearman", "kendall", "numba"]
classifiers = ["Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numba>=0.61", "numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/JonPaulLundquist/lambda_corr"
Issues = "https://github.com/JonPaulLundquist/lambda_corr/issues"

[tool.setuptools.packages.find]
include = ["lambda_corr"]
exclude = ["*tests*", "*results*", "*example*", "*HPC*"]

[tool.setuptools.package-data]
lambda_corr = ["data/*.npz"]
